# mcp-pvp

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: auto-version.yml  ci.yml  docs.yml  release.yml
CAPABILITY_SECURITY/: index.html
OBSERVABILITY/: index.html
RELEASING/: index.html
SPEC/: index.html
THREAT_MODEL/: index.html
VAULT_HARDENING/: index.html
api/: index.html
demos/: killer_demo.py
docs/: CAPABILITY_SECURITY.md  OBSERVABILITY.md  RELEASING.md  SPEC.md  THREAT_MODEL.md  VAULT_HARDENING.md  api.md  getting-started.md  index.md  v0.2.0-RELEASE-SUMMARY.md
examples/: blog_client.py  blog_server.py  mcp_example_client.py  mcp_example_server.py  mcp_server_example.py  mixed_content_example.py  performance_benchmark.py  vault_hardening_demo.py
examples/observability/: README.md  dev_config.py  production_config.py
examples/safe_email_sender/: README.md  example.py
getting-started/: index.html
scripts/: README.md  bump_version.py  release.sh
search/: search_index.json
src/mcp_pvp/: __init__.py  audit.py  caps.py  errors.py  executor.py  models.py  observability.py  policy.py  session.py  store.py  tokens.py  utils.py  vault.py
src/mcp_pvp/bindings/: __init__.py
src/mcp_pvp/bindings/http/: app.py  auth.py  config.py
src/mcp_pvp/bindings/mcp/: __init__.py  server.py
src/mcp_pvp/detectors/: __init__.py  presidio.py  regex.py
tests/: __init__.py  conftest.py  test_adversarial.py  test_audit_coherence.py  test_caps.py  test_executor.py  test_executor_comprehensive.py  test_fast_pvp_mcp.py  test_integration.py  test_policy.py  test_recursive_scrubbing.py  test_result_tokenization.py  test_scanner.py  test_session_comprehensive.py  test_session_integrity.py  test_store.py  test_tokens.py  test_vault.py
v0.2.0-RELEASE-SUMMARY/: index.html
