[project]
name = "mcp-pvp"
version = "0.6.8"
description = "Privacy Vault Protocol for MCP: tokenize sensitive data before the LLM sees it"
authors = [{name = "Spidux.ai Team", email = "team@hidet.io"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "privacy", "pii", "security", "llm", "agent", "vault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ipython>=9.9.0",
    "mcp[cli]>=1.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
sentry = [
    "sentry-sdk[logging]>=2.0.0",
]
docs = [
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=9.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "bandit[toml]>=1.7.0",
    "sentry-sdk[logging]>=2.0.0",  # For type checking observability.py
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=9.5.0",
]
all = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "sentry-sdk[logging]>=2.0.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=9.5.0",
]

[project.scripts]
mcp-pvp-mcp = "mcp_pvp.bindings.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Spidux-ai/mcp-pvp"
Repository = "https://github.com/Spidux-ai/mcp-pvp"
Documentation = "https://github.com/Spidux-ai/mcp-pvp/blob/main/docs/SPEC.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pvp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
]
ignore = [
    "S101",   # assert allowed in tests
    "S104",   # possible binding to all interfaces (we control this via config)
    "S105",   # hardcoded password - false positives for error codes
    "S106",   # hardcoded password - false positives for parameter names like token_format
    "S107",   # hardcoded password - false positives for default values
    "N801",   # MCP_ToolExecutor is a valid name (MCP is acronym)
    "DTZ003", # datetime.utcnow() is acceptable in examples
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "E501"]  # Relax line length in tests
"examples/**/*.py" = ["W293", "E501"]  # Allow whitespace and longer lines in examples

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_pvp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "presidio: tests requiring presidio (deselect with '-m \"not presidio\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/bindings/mcp/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
# Exclude false positives for token/password detection
# These are API parameters, not hardcoded credentials
skips = ["B107", "B105"]  # Hardcoded password argument defaults
